Fixed side nav alignment and styles

--- a/qr-code-generator-ui/src/components/common/common.css
+++ b/qr-code-generator-ui/src/components/common/common.css
@@ -55,20 +55,27 @@
   border-radius: 0 20px 20px 0;
   align-self: flex-end;
 }
+.links-row {
+  background-color: blue;
+  display: flex;
+  padding: 10px 0 50px 0;
+  justify-content: center;
+}
 a {
   padding: none;
   margin: none;
   text-decoration: none;
   transition: opacity 0.6s ease;
 }
-.links svg {
+.links svg,
+.links-row svg {
   margin: 10px 20px 10px 20px;
   width: 40px;
   height: 40px;
   fill: white;
   stroke: white;
 }
-
+.links-row:hover > :not(:hover),
 .links:hover > :not(:hover) {
   opacity: 0.4;
 }
@@ -77,12 +84,17 @@ a {
   position: absolute;
   bottom: 20px;
   color: rgb(66, 66, 66);
-
+  width: 100%;
+  text-align: center;
   height: 2.5rem;
 }
-
+.white {
+  color: white;
+}
 .side-nav {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   width: 400px;
+  height: 100%;
 }
